--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-echo "# penghe1.github.io" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git remote add origin https://github.com/PengHe-nus/penghe1.github.io
-git push -u origin master
+<p>Welcome to Dr. He Peng's homepage!</p>
+<ul> 
+  <li> <a href="https://www.baidu.com">百度</a> </li>
+</ul>
